--- a/site.conf.tmpl
+++ b/site.conf.tmpl
@@ -19,7 +19,7 @@ server {
     location ~ \.php$ {
         include snippets/fastcgi-php.conf;
         # With php-fpm (or other unix sockets):
-        fastcgi_pass unix:/var/run/php/php8.1-fpm.sock;
+        fastcgi_pass unix:{{.PhpSocket}};
         # With php-cgi (or other tcp sockets):
         # fastcgi_pass 127.0.0.1:9000;
 
